--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Qrcode Scanner</title>
-	<link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/icon.PNG" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="js/qrcode.js"></script>
